--- a/setting.cfg
+++ b/setting.cfg
@@ -6,6 +6,14 @@
 
         "packages": {
             "voice": "true"
+        },
+
+        "mysql": {
+            "host": "localhost",
+            "username": "root",
+            "password": "",
+            "dbname": "",
+            "port": "3306"
         }
     }
 ]
